<resources>
    <string name="app_name">WeeSpare</string>
    <string name="app_message_splash">Descuentos en Productos y Servicios...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_private_terms">Aviso de privacidad</string>
    <string name="action_disable">Desactivar</string>
    <string name="action_edit_title">Cambiar Título</string>
    <string name="action_edit_publication">Editar Publicación</string>
    <string name="action_pause_publication">Pausar o Suspender</string>
    <string name="action_activate_publication">ReActivar Publicación</string>
    <string name="action_remove_publication">Eliminar Publicacion </string>
    <string name="action_delete_fav">Quitar de favoritos</string>
    <string name="action_subscribe">Suscribirme</string>
    <string name="action_notify">Enviar notificación</string>
    <string name="action_rate">Añadir Reseña</string>
    <string name="action_receive">Recibí el producto/servicio</string>
    <string name="action_shipping">Entregué el producto</string>
    <string name="action_voucher">Subir Comprobante de Pago</string>
    <string name="action_view_voucher">Ver Comprobante de Pago</string>
    <string name="action_product_are_sent">Detalle de envío/entrega/canjeo:</string>
    <string name="action_questions_reply">Responder preguntas</string>
    <string name="action_questions_pending">Preguntas</string>
    <string name="action_notify_reply">Responder</string>
    <string name="action_send_ask">Escribe tu pregunta</string>
    <string name="promt_no_response_yet">Respuesta pendiente</string>
    <string name="action_unsubscribe">Des Suscribirme</string>
    <string-array name="percentages">
        <item>Seleccione...</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>80</item>
    </string-array>
    <string name="category_text">Seleccione por cuales productos esta interesado:</string>
    <string name="promt_category_search">Tipo producto...</string>
    <string name="promt_category_search_3">Ej, dentista, cocina japonesa,..</string>
    <string name="promt_all_categories">Todas las Categorias</string>
    <string name="promt_all_subcategories">Todas</string>
    <string name="promt_no_filters">Quitar filtros y consultar todas</string>
    <string name="title_activity">Actividad</string>
    <string name="action_session">Inicia Sesión o Regístrate</string>
    <string name="action_singup">Regístrate</string>
    <string name="action_edit_profile">Perfil</string>
    <string name="action_club">Club WeeSpare</string>
    <string name="action_help">Ayuda</string>
    <string name="action_promotions">Promociones</string>
    <string name="action_support">Soporte a clientes</string>
    <string name="action_share">Compartir</string>
    <string name="action_send">Email</string>
    <string name="action_send_email">Envía</string>
    <string name="action_filter_dates">Búsqueda por fechas</string>
    <string name="action_filter_capture_line">Línea de captura</string>
    <string name="action_apply_filters">Aplicar filtros</string>
    <string name="promt_title_send_email">Contactar</string>
    <string name="action_exit">Salir</string>
    <string name="promt_yes">Si</string>
    <string name="promt_no">No</string>
    <string name="action_close">Cerrar Sesión</string>
    <string name="action_buy">Comprar</string>
    <string name="action_buy_disabled">Expirada</string>
    <string name="prompt_cupons_suscription">No aplica</string>
    <string name="prompt_suscription_status_title">Estado de tu Campaña</string>
    <string name="prompt_fee_by_cupons">comisiones x venta de productos</string>
    <string name="prompt_campaing_title">Crear una campaña (facebook,Google AdWords,etc,.)</string>
    <string name="prompt_campaing_comming_soon">Disponible pronto...</string>
    <string name="prompt_button_approval_true">Aprobar</string>
    <string name="prompt_button_approval_false">Rechazar</string>
    <string name="prompt_text_comment">Comentario</string>
    <string name="prompt_text_no_pending_publications">No hay publicaciones pendientes</string>
    <string name="action_publish">Mis Publicaciones</string>
    <string name="action_orders">Ventas</string>
    <string name="action_customers">Mis Clientes</string>
    <string name="action_purchase">Cupones Comprados</string>
    <string name="action_floating_menu">Seleccione</string>
    <string name="action_participate">Promociones</string>
    <string name="action_find_business">Prestadores de Servicios</string>
    <string name="action_admin">Administración</string>
    <string name="action_favorites">Favoritos</string>
    <string name="action_location">Cambiar Ubicación</string>
    <string name="promt_drive_to">Conducir hacia allá</string>
    <string name="promt_shipping_all_options">Permitir envios por paquetería (DHL, Estafeta,etc,.)</string>
    <string name="promt_shipping_available_title">Tipos de entrega disponibles</string>
    <string name="promt_shipping_to_home">Servicio a domicilio</string>
    <string name="promt_shipping_on_store">Recoger en tienda</string>
    <string name="promt_shipping_local">WeeSpare Envíos</string>
    <string name="promt_shipping_nacional">Envío Nacional</string>
    <string name="promt_shipping_free">Envío gratis</string>
    <string name="promt_reviews_title">Opiniones sobre este producto</string>
    <string name="promt_question_title">Preguntas</string>
    <string name="promt_question_button">Preguntar</string>
    <string name="promt_business_info">"Información de "</string>
    <string name="promt_business_info_title">¿Quienes Somos?</string>
    <string name="promt_business_info_hint">Descripción de mis Servicios</string>
    <string name="promt_business_info_error">No hay información disponible</string>
    <string name="promt_no_publications">Crea tu primera publicación aqui -></string>
    <string name="action_preferences">Preferencias</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="generic_server_down">Ups, el servicio no esta disponible por el momento.</string>
    <string name="no_internet">Verifique que tiene acceso a Internet y vuelva a intentar.</string>
    <string name="no_connection">No hemos podido conectar con el Servidor, inténtalo nuevamente.</string>
    <string name="generic_error">Servicio no disponible.</string>
    <string name="generic_server_timeout">El servicio no esta disponible o puede estar experimentando problemas de conexión.</string>
    <string name="auth_failed">Error de autenticación al conectarse.</string>
    <string name="no_network_connection">Verifique que tiene señal de red</string>
    <string name="validation_errors">Verifique la información</string>
    <string name="parsing_failed">Error de procesamiendo de datos</string>
    <string name="button_config">Iniciar</string>
    <string name="text_config">Ayúdanos a configurar tus preferencias</string>
    <string name="search">Buscar país...</string>
    <string name="selectCountry">Selecciona tu País</string>
    <string name="searchCity">Buscar Ciudad...</string>
    <string name="selectCity">Selecciona tu Estado</string>
    <string name="selectCategory">¿ Cuales son tus intereses ?</string>
    <string name="buttonOk">Listo</string>
    <string name="promt_search_services">Buscar cupones...</string>
    <string name="promt_search">Buscar...</string>
    <string name="nopublications">Por el momento no hay promociones</string>
    <string name="title_activity_categories">Tus intereses</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_renombrar">renombrar</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="promt_publications_not_found">No hay publicaciones por el momento</string>
    <string name="promt_results_not_found">No se encontraron registros</string>
    <string name="text_description_title">Descripción detallada (largo)</string>
    <string name="text_description_detail_title">Descripción</string>
    <string name="text_important_title">Destacado</string>
    <string name="text_characteristics_title">Características</string>
    <string name="detail_title_availability">Disponibilidad</string>
    <string name="text_availability_images">" disponibles"</string>
    <string name="detail_title_effectiveDate">Válido hasta</string>
    <string name="ads_title_date">Finaliza</string>
    <string name="ads_title_date_operation">Fecha</string>
    <string name="promtp_title_generate_receipt">Ficha de pago</string>
    <string name="promtp_generate_receipt">Generar recibo de pago</string>
    <string name="promtp_payment_processing">Procesando\nPor favor espera...</string>
    <string name="text_prompt_date_operation">Fecha Operación:</string>
    <string name="text_prompt_additional_info">Info. Adicional:</string>
    <string name="text_prompt_days_created">Vendido:</string>
    <string name="text_prompt_money_relase">Dinero disponible el:</string>
    <string name="text_prompt_shipping_status">Prod. enviado/Servicio prestado:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_shipping_hint">Proporcionar datos...</string>
    <string name="prompt_your_name">Nombre</string>
    <string name="send_notification">Enviar</string>
    <string name="promt_password_recovery_text">Proporciona tu email registrado para poder enviarte instrucciones para recuperar tu acceso</string>
    <string name="promt_phone">Teléfono</string>
    <string name="promt_setting_notifications_title">Notificaciones</string>
    <string name="promt_setting_preferences_title">Preferencias</string>
    <string name="promt_setting_notifications_desc1">Recibir Notificaciones</string>
    <string name="promt_setting_notifications_desc2">Recibir notificaciones de ofertas</string>
    <string name="promt_setting_categories_desc1">Categorias</string>
    <string name="promt_setting_categories_desc2">Selecciona que categorias de productos te interesan más</string>
    <string name="promt_message">Proporcione mensaje a enviar...</string>
    <string name="promt_comment">Opine acerca de este Proveedor...</string>
    <string name="prompt_location_alias">Alias Sucursal/Local/Oficina</string>
    <string name="text_promt_send_rate_stars_title">Calificación</string>
    <string name="text_promt_product_sent">Confirmar que ya se envió el producto o que el Comprador ha hecho efectivo el descuento</string>
    <string name="text_promt_send_rate_comment_title">Comentario</string>
    <string name="text_promt_tracking_title">Proporcione número de guía y compañia (Estafeta, DHL, Correos, WeeSpareEnvios, otra)</string>
    <string name="text_promt_shipping_on_store_condition">Cliente recogió en Tienda/Entrega personal</string>
    <string name="text_promt_copy">Envíame una copia</string>
    <string name="text_promt_publication">Publicación:</string>
    <string name="text_promt_business">Anunciante:</string>
    <string name="text_button_conditions">"Acepto las "</string>
    <string name="text_button_conditions_2"><u>Condiciones de uso</u></string>
</resources>