<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_login" android:icon="@drawable/ic_action_users"
            android:title="@string/action_session" />
       <item android:id="@+id/nav_profile" android:icon="@drawable/ic_action_user"
            android:title="@string/action_edit_profile" />
        <item android:id="@+id/nav_club" android:icon="@drawable/ic_action_cart"
            android:title="@string/action_club" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item android:id="@+id/nav_private" android:icon="@drawable/ic_security"
              android:title="@string/action_private_terms" />
        <item android:id="@+id/nav_help" android:icon="@drawable/ic_help"
              android:title="@string/action_help" />
    </group>
<!--
    <item android:title="@string/title_activity">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@drawable/ic_action_share"
                android:title="@string/action_share" />
            <item android:id="@+id/nav_send" android:icon="@drawable/ic_action_mail"
                android:title="@string/action_send" />
        </menu>
    </item>
    -->
    <item android:title="Operaciones">
        <menu>
            <item android:id="@+id/nav_exit" android:icon="@drawable/ic_exit_to_app"
                android:title="@string/action_close"/>
        </menu>
    </item>

</menu>