<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/gray_ligth"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_promt_business"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/negro_semitransparente"/>
        <TextView
            android:id="@+id/text_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="16dp"
            android:text="Compania"/>
    </LinearLayout>



    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_ligth" />

    <EditText
        android:id="@+id/text_name"
        android:hint="@string/prompt_your_name"
        android:layout_width="match_parent"
        android:textColor="@color/negro"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text_email"
        android:hint="@string/prompt_email"
        android:layout_width="match_parent"
        android:textColor="@color/negro"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text_phone"
        android:hint="@string/promt_phone"
        android:layout_width="match_parent"
        android:textColor="@color/negro"
        android:inputType="phone"
        android:layout_height="wrap_content"/>



    <EditText
        android:id="@+id/text_message"
        android:hint="@string/promt_message"
        android:layout_width="match_parent"
        android:textColor="@color/negro"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:minLines="3"
        android:layout_height="wrap_content"/>


</LinearLayout>