<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/gray_ligth"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_promt_publication"
            android:textColor="@color/negro"/>
        <TextView
            android:id="@+id/text_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/negro"
            android:layout_marginLeft="16dp"
            android:text="Titulo publicacion"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/gray_ligth"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_promt_business"
            android:textColor="@color/negro"/>
        <TextView
            android:id="@+id/text_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/negro"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"
            android:text="Compania"/>
    </LinearLayout>



    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_ligth" />

        <EditText
            android:id="@+id/text_name"
            android:hint="@string/prompt_location_alias"
            android:layout_width="match_parent"
            android:textColor="@color/negro"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_email"
            android:hint="@string/prompt_email"
            android:layout_width="match_parent"
            android:textColor="@color/negro"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/text_phone"
            android:hint="@string/promt_phone"
            android:layout_width="match_parent"
            android:textColor="@color/negro"
            android:inputType="phone"
            android:layout_height="wrap_content"/>



        <EditText
            android:id="@+id/text_message"
            android:hint="@string/promt_message"
            android:layout_width="match_parent"
            android:textColor="@color/negro"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:minLines="3"
            android:layout_height="wrap_content"/>


        <Switch
            android:id="@+id/switch_copy"
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/text_promt_copy"
            android:textColor="@color/colorPrimaryDark"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkbox_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:checked="true"
                />

            <TextView
                android:textColor="@color/negro"
                android:text="@string/text_button_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_conditions"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:text="@string/text_button_conditions_2"
                android:autoLink="all"
                android:linksClickable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>