<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro_semitransparente"
        android:padding="8dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_promt_product_sent"/>


    <TextView
        android:id="@+id/text_tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro_semitransparente"
        android:padding="8dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_promt_tracking_title"/>


    <EditText
        android:id="@+id/text_message"
        android:hint="@string/prompt_shipping_hint"
        android:layout_width="match_parent"
        android:textColor="@color/negro_semitransparente"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:minLines="3"
        android:maxLength="250"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check_condition"
        android:text="@string/text_promt_shipping_on_store_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_error_shipping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:padding="16dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/pbLoading_shipping"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_done_shipping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:text="@string/action_notify"/>
</LinearLayout>