<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="estrategiamovil.comerciomovil.ui.fragments.SettingsFragment">
    <TextView
        android:layout_width="match_parent"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:text="@string/promt_setting_notifications_title"
        android:textColor="@color/colorPrimaryDark"/>



    <LinearLayout
        android:id="@+id/layout_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/promt_setting_notifications_desc1"
            android:textColor="@color/negro"/>
        <Switch
            android:id="@+id/switch_notifications"
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:clickable="false"
            android:checked="true"
            android:text="@string/promt_setting_notifications_desc2"
            android:textColor="@color/gray"/>
    </LinearLayout>
    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_ligth" />
    <TextView
        android:layout_width="match_parent"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:text="@string/promt_setting_preferences_title"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:id="@+id/layout_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/promt_setting_categories_desc1"
            android:textColor="@color/negro"/>

        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:clickable="false"
            android:text="@string/promt_setting_categories_desc2"
            android:textColor="@color/gray"/>

    </LinearLayout>
    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_ligth" />
</LinearLayout>
