<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:padding="8dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_promt_send_rate_stars_title"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:padding="8dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_promt_send_rate_comment_title"/>


    <EditText
        android:id="@+id/text_message_rated"
        android:hint="@string/promt_comment"
        android:layout_width="match_parent"
        android:textColor="@color/negro"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:minLines="3"
        android:maxLength="250"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_error_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:padding="16dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/pbLoading_rate"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:text="@string/buttonOk"/>
</LinearLayout>